[gd_scene load_steps=7 format=3 uid="uid://bp3ym5chah6ee"]

[ext_resource type="Script" path="res://Scripts/Levels/mainmenu.gd" id="1_isdwb"]
[ext_resource type="Texture2D" uid="uid://8epkpuji2qwp" path="res://Assets/images/Planet-Placeholder.webp" id="2_ryqsy"]
[ext_resource type="PackedScene" uid="uid://bjaxd6el85p4r" path="res://Scenes/UI/MainMenuScreen.tscn" id="3_g4i66"]
[ext_resource type="PackedScene" uid="uid://bspyw2aqtsnif" path="res://Scenes/UI/ChapterSelectScreen.tscn" id="4_w2687"]
[ext_resource type="PackedScene" uid="uid://dvwpsvyo1m2vd" path="res://Scenes/UI/OptionsScreen.tscn" id="5_r520f"]
[ext_resource type="PackedScene" uid="uid://ch7g2n6q3v5fv" path="res://Scenes/music_controller.tscn" id="6_t580d"]

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_isdwb")
metadata/_edit_vertical_guides_ = [-145.0]

[node name="UI" type="CanvasLayer" parent="."]

[node name="BackgroundTexture" type="TextureRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ryqsy")
expand_mode = 3

[node name="MainMenuScreen" parent="UI" instance=ExtResource("3_g4i66")]

[node name="ChapterSelectScreen" parent="UI" instance=ExtResource("4_w2687")]

[node name="OptionsScreen" parent="UI" instance=ExtResource("5_r520f")]

[node name="MusicController" parent="." instance=ExtResource("6_t580d")]
